--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,9 @@
 /bin/
+*.class
+Token.java
+TokenMgrError.java
+SimpleCharStream.java
+QuartzTokenManager.java
+QuartzConstants.java
+Quartz.java
+ParseException.java
